update styling for page  background

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-color: rgb(217, 234, 240);
+    background-color: hsl(317, 63%, 80%);
     color: #555;
 }
 header {
